ET-5 IE CSS issues in RMD screen. Overflow, text wrap and z-index mainly

--- a/registry/src/orca/_styles/add_registry_object.css
+++ b/registry/src/orca/_styles/add_registry_object.css
@@ -134,6 +134,7 @@ limitations under the License.
 	overflow: hidden;
 	position: relative;
 	background: #e0e0e0;
+	white-space:nowrap;
 }
 
 #table-cell ul.tabs li.error {
